# eli

./: .gitignore  .vercelignore  AGENTS.md  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
app/: layout.tsx
app/api/categories/: route.ts
app/api/chart-data/: route.ts
app/api/expenses/: route.ts
app/api/payment-methods/: route.ts
app/api/products/: route.ts
app/api/sales/: route.ts
app/api/stats/: route.ts
app/auth/login/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/clients/: page.tsx
app/dashboard/expenses/: page.tsx
app/dashboard/inventory/: page.tsx
app/dashboard/products/: page.tsx
app/dashboard/sales/: page.tsx
app/dashboard/settings/: page.tsx
components/dashboard/: sidebar.tsx  topbar.tsx
components/dashboard/clients/: clients-dialog.tsx  clients-table.tsx
components/dashboard/expenses/: expenses-dialog.tsx  expenses-table.tsx
components/dashboard/inventory/: inventory-dialog.tsx  inventory-table.tsx
components/dashboard/products/: products-dialog.tsx  products-table.tsx
components/dashboard/sales/: sales-dialog.tsx  sales-table.tsx
components/dashboard/settings/: categories-manager.tsx  (+1 more)
lib/: desktop-supabase.ts  server-supabase.ts  services-desktop-offline.ts  services.ts  supabase.ts  utils.ts
scripts/: 01-create-schema.sql  02-clients-inventory-schema.sql  verify-desktop-offline.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+6 files in other folders)
